[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/protocol",
    "crates/storage",
    "crates/server",
    "crates/cli",
]

[workspace.dependencies]
tokio = { version = "1.47", features = ["full"] }
bytes = "1.7"
dashmap = "6.1"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
stormdb-common = { path = "crates/common" }
stormdb-protocol = { path = "crates/protocol" }
stormdb-storage = { path = "crates/storage" }
