[package]
name = "stormdb-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
stormdb-common = { workspace = true }
stormdb-protocol = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3"

[[bench]]
name = "storage_bench"
harness = false
